<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_mail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="8dp"
    tools:context=".ui.AddMeetingFragment">

    <!-- TODO: Update blank fragment layout -->


    <Spinner
        android:id="@+id/spinner_room"
        android:layout_width="359dp"
        android:layout_height="65dp"

        android:layout_marginTop="32dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/meetting_startDateTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meetting_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="362dp"
        android:layout_height="65dp"

        android:layout_marginTop="32dp"
        android:hint="Sujet"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/add_reunion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/meetting_subject1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/meetting_startDateTv"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="202dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:gravity="center"

        android:hint="Date et heure du debut"
        android:padding="4dp"
        android:textSize="@dimen/size_text_mail_participant"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/meetting_subject" />


    <Spinner
        android:id="@+id/spinner_time_duration"
        android:layout_width="138dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/meetting_startDateTv"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"

        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toEndOf="@+id/meetting_startDateTv"
        app:layout_constraintTop_toTopOf="@+id/meetting_startDateTv"
        app:layout_constraintVertical_bias="0.0" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/list_participant"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="Name of participant"
        android:padding="8dp"
        android:textSize="@dimen/size_text_mail_participant"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_participant" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_add_participant"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:gravity="center"

        android:hint="Select participants"
        android:textSize="@dimen/size_text_mail_participant"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/spinner_room" />

    <Button
        android:id="@+id/add_reunion"
        android:layout_width="163dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:text="Add a meetting"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="380dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>